# libsmb2

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.platform  README  build_vita.sh  component.mk  configure.ac  libsmb2.pc.in  libsmb2_error.latest.patch  module.modulemap
.github/workflows/: c-cpp.yml  ccpp.yml  codeql.yml  compilation.yml  esp_upload_component.yml
Xbox/: libsmb2.sln  libsmb2.vcproj
Xbox 360/: libsmb2.vcxproj  libsmb2.vcxproj.filters
cmake/: ConfigureChecks.cmake  config.h.cmake
cmake/PS2/: ps2dev_ee_ips.cmake  ps2dev_iop.cmake
dcerpc-examples/: lsa-Close.yaml  lsa-LookupNames2.yaml  lsa-LookupSids2.yaml  lsa-OpenPolicy2.yaml  srvsvc-NetrConnectionEnum.yaml  srvsvc-NetrFileClose.yaml  srvsvc-NetrFileEnum.yaml  srvsvc-NetrFileGetInfo.yaml  srvsvc-NetrRemoteTOD.yaml  srvsvc-NetrServerDiskEnum.yaml  srvsvc-NetrServerGetInfo.yaml  srvsvc-NetrServerSetInfo.yaml  srvsvc-NetrServerStatisticsGet.yaml  srvsvc-NetrSessionDel.yaml  srvsvc-NetrSessionEnum.yaml  srvsvc-NetrShareAdd.yaml  srvsvc-NetrShareCheck.yaml  srvsvc-NetrShareDel.yaml  srvsvc-NetrShareDelSticky.yaml  srvsvc-NetrShareEnum.yaml  srvsvc-NetrShareGetInfo.yaml  srvsvc-NetrShareSetInfo.yaml  wkssvc-NetrUseEnum.yaml  wkssvc-NetrWkstaGetInfo.yaml  wkssvc-NetrWkstaSetInfo.yaml  wkssvc-NetrWkstaUserEnum.yaml  wkssvc-NetrWorkstationStatisticsGet.yaml
examples/: CMakeLists.txt  Makefile.am  dcerpc.c  ps2-usmb2-cat.c  smb2-CMD-FIND.c  smb2-cat-async.c  smb2-cat-sync.c  smb2-dcerpc-coder-test.c  smb2-ftruncate-sync.c  smb2-link-sync.c  smb2-ls-async.c  smb2-ls-epoll.c  smb2-ls-sync.c  smb2-ls.c  smb2-lsa-lookupsids.c  smb2-lseek-sync.c  smb2-notify.c  smb2-put-async.c  smb2-put-sync.c  smb2-raw-fsstat-async.c  smb2-raw-getsd-async.c  smb2-raw-stat-async.c  smb2-readlink.c  smb2-rename-sync.c  smb2-server-side-copy-sync.c  smb2-server-sync.c  smb2-set-security-info.c  smb2-share-enum-sync.c  smb2-share-enum.c  smb2-share-info.c  smb2-stat-sync.c  smb2-statvfs-sync.c  smb2-truncate-sync.c  usmb2.c
examples/picow/: CMakeLists.txt  main.cpp
include/: Makefile.am  asprintf.h  libsmb2-config.h  libsmb2-private.h  portable-endian.h
include/amiga_os/: config.h
include/apple/: config.h
include/dc/: config.h
include/esp/: config.h
include/gamecube/: config.h
include/msvc/: poll.h
include/msvc/sys/: socket.h
include/n3ds/: config.h
include/nds/: config.h
include/nintendo switch/: config.h
include/picow/: config.h
include/ps2/: config.h
include/ps3/: config.h
include/ps4/: config.h
include/smb2/: libsmb2-dcerpc-lsa.h  libsmb2-dcerpc-srvsvc.h  libsmb2-dcerpc-wkssvc.h  libsmb2-dcerpc.h  libsmb2-raw.h  libsmb2.h  smb2-dllapi.h  smb2-errors.h  smb2-exports.h  smb2-ioctl.h  smb2.h  usmb2.h
include/switch/: config.h
include/wii/: config.h
include/wiiu/: config.h
include/xbox/: config.h  xb_emu_socket.h
include/xbox 360/: config.h
lib/: CMakeLists.txt  Makefile.3DS  Makefile.AMIGA  Makefile.AMIGA_AROS  Makefile.AMIGA_OS3  Makefile.DC_KOS  Makefile.DS_ARM7  Makefile.DS_ARM9  Makefile.GC  Makefile.PS2_EE  Makefile.PS2_EE_IP  Makefile.PS2_EE_IPS  Makefile.PS2_IOP  Makefile.PS3_PPU  Makefile.PS4  Makefile.SWITCH  Makefile.WII  Makefile.WIIU  Makefile.am  aes.c  aes.h  aes128ccm.c  aes128ccm.h  aes_reference.c  aes_reference.h  alloc.c  asn1-ber.c  asn1-ber.h  compat.c  compat.h  dcerpc-lsa.c  dcerpc-srvsvc.c  dcerpc-wkssvc.c  dcerpc.c  errors.c  hmac-md5.c  hmac-md5.h  hmac.c  imports.lst  init.c  (+71 more)
lib/.deps/: libnfs_la-init.Plo  libnfs_la-libnfs-sync.Plo  libnfs_la-libnfs-zdr.Plo  libnfs_la-libnfs.Plo  libnfs_la-pdu.Plo  libnfs_la-socket.Plo
lib/dreamcast/: vfs.c  vfs.h
lib/ps2/: CMakeLists.txt  imports.lst  ps2smb2.h  smb2_fio.c
lib/xbox/: addrinfo.h  emu_socket.cpp  emu_socket.h  getaddrinfo.c  getnameinfo.c  inet_aton.c  inet_ntop.c  inet_pton.c  xb_emu_socket.h
packaging/RPM/: libsmb2.spec.in
tests/: Makefile.am  ld_sockerr.c  prog_cat.c  prog_cat_cancel.c  prog_ls.c  prog_mkdir.c  prog_query_disposition.c  prog_rmdir.c  prog_setsd.c  prog_ssc.c  smb2-dcerpc-coder-test.c  test_0100_ls_basic.sh  test_0101_ls_basic_valgrind.sh  test_0102_ls_basic_socket_error.sh  test_0103_ls_basic_valgrind_malloc_error.sh  test_0200_mkdir.sh  test_0300_cat_basic.sh  test_0301_cat_valgrind.sh  test_0302_cat_valgrind_socket_error.sh  test_0401_cp_valgrind.sh  test_0500_setsd_basic.sh  test_0600_ssc_basic.sh  test_0700_query_disposition.sh
utils/: Makefile.am  smb2-cp.c  smb2-ls.c
